Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124162

Qt Assistant Print Preview is not working

    XMLWordPrintable

Details

    • macOS, Windows
    • f6030b830 (master), b9ca03330 (master), d1856ca49 (dev), dd669c846 (dev), 3be0f9e4e (6.8)

    Description

      Print Preview in Qt Assistant for Qt6.2 and higher is not working. It works for Qt5.15.

      It is no longer possible to print documentation from Qt Assistant.

      Attached screen recording

      Attachments

        1. printPreview.mp4
          2.25 MB
          Irfan Omair
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            irfan.omair@digia.com Irfan Omair
            Votes:
            5 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes