Assistant: Implement printing and print preview

The actual printing is implemented in QLiteHtmlWidget. Update the
qlitehtml's submodule to enable the new printing functionality.

Task-number: QTBUG-124162
Change-Id: I0dace3f16efa210c05cfa0d7e2dc4531d9f104ba
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>